# earthkit-hydro

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Cargo.toml  README.md  example.ipynb  pyproject.toml  pytest.ini  setup.py
.github/: ci-hpc-config.yml  ci-hpc-gpu-config.yml
.github/workflows/: cd.yml  ci.yml  downstream-ci.yml  label-public-pr.yml  nightly-hpc-gpu.yml  test-pypi.yml
docs/: Makefile  requirements.txt
docs/notebooks/: example.ipynb
docs/source/: api.rst  citing.rst  conf.py  contributing.rst  earthkit-packages.yml  faq.rst  getting-started.rst  index.rst  notebook.rst  overview.rst  references.bib  references.rst  user_guide.rst  why.rst  writing-guidelines.rst
docs/source/_static/: custom.css
docs/source/concepts/: array_backend_design.rst  catchment_concepts.rst  coordinate_systems.rst  distance_vs_length_concepts.rst  earthkit_ecosystem.rst  flow_direction_systems.rst  index.rst  missing_value_handling.rst  pcraster_compatibility.rst  performance_considerations.rst  river_network_concepts.rst  topological_sorting.rst
docs/source/explanation/: flow_direction_systems.rst  index.rst  performance_considerations.rst
docs/source/how-tos/: index.rst
docs/source/howto/: calculate_river_distances.rst  calculate_stream_order.rst  compute_catchment_statistics.rst  compute_flow_accumulations.rst  delineate_catchments.rst  handle_missing_data.rst  index.rst  load_river_network.rst  optimize_performance.rst  specify_locations.rst  visualize_results.rst
docs/source/notebooks/: example.ipynb  example2.ipynb
docs/source/tutorials/: array_backend.ipynb  catchment_statistics.ipynb  computing_accumulations.ipynb  creating_subnetworks.ipynb  distance_length.ipynb  finding_catchments.ipynb  gridded_masked.ipynb  index.rst  loading_river_networks.ipynb  streamorder.ipynb  xarray_array.ipynb
docs/source/userguide/: catchment_delineation.rst  catchment_statistics.rst  distance_length_calculations.rst  earthkit.rst  flow_accumulations.rst  index.rst  loading_a_river_network.rst  pcraster.rst  raster_vector_inputs.rst  specifying_locations.rst  subnetwork_creation.rst  xarray_array_backend.rst
hydro/: readers.py  river_network.py
rust/: lib.rs  mode.rs  percentile.rs  percentile_downstream.rs  weighted_percentile.rs  weighted_percentile_downstream.rs
src/earthkit/: example.ipynb
src/earthkit/hydro/: __init__.py  _accumulation.py  _catchment.py  _numba.py  _version.py  accumulation.py  caching.py  catchment.py  catchment_metric.py  catchments.py  core.py  distance.py  distribution.py  downstream.py  flow.py  graph.py  label.py  length.py  methods.py  metrics.py  movement.py  network.py  network_class.py  network_utils.py  pcr.py  pcr_utils.py  plot.py  python.py  readers.py  river_network.py  streamorder.py  subcatchments.py  subnetwork.py  test_case.ipynb  topological_labels.py  topological_labels_python.py  topological_labels_rust.py  upstream.py  utils.py  zonal.py
src/earthkit/hydro/_backends/: cupy_backend.py  dask_backend.py  find.py  mlx_backend.py  tensorflow_backend.py
src/earthkit/hydro/_core/: _accumulate.py  _find.py  _move.py  metrics.py  move.py  online.py
src/earthkit/hydro/_readers/: __init__.py  _cama.py  _core.py  _d8.py  _grit.py  ldd_repair.py  readers.py
src/earthkit/hydro/_utils/: coords.py  locations.py  readers.py
src/earthkit/hydro/backends/: array_backend.py  cupy_backend.py  jax_backend.py  numpy_backend.py  tensorflow_backend.py  torch_backend.py
src/earthkit/hydro/catchment/: __init__.py  catchment_metrics.py
src/earthkit/hydro/catchments/: __init__.py  _operations.py  _toplevel.py  _xarray.py  find.py  metrics.py  operations.py
src/earthkit/hydro/core/: _accumulate.py  _find.py  accumulate.py  flow.py  metrics.py  online.py
src/earthkit/hydro/data_structures/: __init__.py  _network.py  _network_storage.py  network.py
src/earthkit/hydro/distance/: __init__.py  _toplevel.py  metrics.py  operations.py
src/earthkit/hydro/downstream/: __init__.py  _toplevel.py  operations.py
src/earthkit/hydro/length/: __init__.py  _toplevel.py  metrics.py  (+1 more)
tests/: benchmark_nx.ipynb  conftest.py  helper.py  test_accumulation.py  test_catchment.py  test_distance.py  test_movement.py  test_networkx.py  test_river_network.py
tests/_test_inputs/: accumulation.py  catchment.py  distance.py  movement.py  streamorder.py
tests/catchments/array/: test_find.py  test_max.py  test_mean.py  test_min.py  test_mode.py  test_percentile.py  test_std.py  test_sum.py  test_var.py
tests/catchments/xarray/: test_find.py  test_max.py  test_mean.py  test_min.py  test_mode.py  test_node_index_order.py  test_percentile.py  test_std.py  test_sum.py  test_var.py
tests/distance/array/: test_max.py  test_min.py  test_to_sink.py  test_to_source.py
tests/distance/xarray/: test_max.py  test_min.py  test_to_sink.py  test_to_source.py
tests/downstream/array/: test_max.py  test_mean.py  test_min.py  test_mode.py  test_percentile.py  test_std.py  test_sum.py  test_var.py
tests/downstream/xarray/: test_max.py  test_mean.py  test_min.py  test_mode.py  test_percentile.py  test_std.py  test_sum.py  test_var.py
tests/ldd_repair/: test_ldd_repair.py
tests/ldd_repair/data/: ldd_repaired.nc
tests/length/array/: test_max.py  test_min.py  test_to_sink.py  test_to_source.py
tests/length/xarray/: test_max.py  test_min.py  test_to_sink.py  test_to_source.py
tests/move/array/: test_downstream.py  test_upstream.py
tests/move/xarray/: test_downstream.py  test_upstream.py
tests/river_network/: test_load.py
tests/streamorder/array/: test_shreve.py  test_strahler.py
tests/streamorder/xarray/: test_shreve.py  test_strahler.py
tests/subnetwork/: test_subnetwork.py
tests/test_inputs/: accumulation.py  readers.py
tests/upstream/: test_percentile.py
tests/upstream/array/: test_max.py  test_mean.py  test_min.py  test_mode.py  test_percentile.py  test_std.py  test_sum.py  test_var.py
tests/upstream/xarray/: test_max.py  test_mean.py  test_min.py  test_mode.py  test_percentile.py  test_std.py  test_sum.py  test_var.py
(+76 files in other folders)
